--- a/styles/style_menu.css
+++ b/styles/style_menu.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Pixelify Sans', sans-serif;
+}
+
 body {
     background-image: url('/assests/parque.jpg'); /* Caminho para a imagem do fundo */
     background-size: cover; /* Faz a imagem cobrir toda a tela */
@@ -5,21 +12,76 @@ body {
     background-repeat: no-repeat; /* Impede que a imagem se repita */
     color: white; /* Cor do texto, ajuste conforme necessário */
     font-family: Arial, sans-serif; /* Fonte do corpo */
+
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu-container {
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.507);
     padding: 50px;
     margin: 10px;
     border-radius: 15px;
-    box-shadow: 0 0 20px rgba(155, 154, 154, 0.3);
+    box-shadow: 0 0 20px rgba(155, 154, 154, 0.288);
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 3px solid #81c784;
+}
+
+.menu-container img {
+    height: 350px;
 }
 
 h1 {
+    margin-top: -50px;
     font-size: 2.5em;
     margin-bottom: 30px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+
+.button {
+    position: relative;
+    display: inline-block;
+    margin: 10px;
+}
+
+.button a {
+    width: 250px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+    background-color: rgb(194, 194, 41);
+    display: inline-block;
+    position: relative;
+    padding: 10px;
+    box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
+    border-radius: 5px;
+    font-weight: 500;
+    font-family: 'Pixelify Sans', sans-serif;
+    text-decoration: none;
+}
+
+.button a:active {
+    top: 10px;
+    background-color: rgb(194, 194, 41);
+    box-shadow: inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
+}
+
+.rounded {
+    border-radius: 100%;
 }
 
 .menu-button {
@@ -53,15 +115,28 @@ h1 {
 }
 
 .modal-content {
+    width: 80%;
+    height: 60%;
     position: relative;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(127, 187, 92, 0.9);
     margin: 10% auto;
     padding: 20px;
     width: 70%;
     max-width: 500px;
     border-radius: 10px;
-    color: #333;
+    color: black;
     text-align: center;
+}
+
+.modal-content h2 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.modal-content p, ul li {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    list-style: none;
 }
 
 .close-button {
