--- a/styles/style_jogo.css
+++ b/styles/style_jogo.css
@@ -28,6 +28,7 @@ h1 {
 .button a {
     color: rgb(0, 0, 0);
     font-weight: bold;
+    padding: 10px 12px;
     font-size: 25px;
     text-align: center;
     background-color: rgb(194, 194, 41);
@@ -158,7 +159,7 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: #81c784;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -166,6 +167,18 @@ h1 {
 
 .modal-content {
     margin-bottom: 20px;
+}
+
+.modal-content h2 {
+    font-size: 2.5rem;
+}
+
+.modal-content h1 {
+    font-size: 2.5rem;
+}
+
+.modal-content input {
+    font-size: 2rem;
 }
 
 .fechar-modal {
@@ -177,6 +190,11 @@ h1 {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+#nameForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #nameForm input {
